Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-1747

[C++] Access to ColumnChunkMetaData fails when encryption is on

    XMLWordPrintableJSON

Details

    Description

      When encryption is on, can't access ColumnChunkMetaData from the RowGroupMetaData.

      For example, this code won't work with encryption on.

      reader->metadata()
       ->RowGroup(0)
       ->ColumnChunk(0)
       ->num_values();
      

       

       One implication is that the Parquet Arrow API doesn't work with encryption on.
      Tests for the Parquet Arrow API (with encryption) are soon to follow in a separate PR.

      Attachments

        Issue Links

          Activity

            People

              gallushi Gal Lushi
              gallushi Gal Lushi
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 3h 20m
                  3h 20m