PARQUET-1747: [C++] Access to ColumnChunkMetaData fails when encryption is on

Closes #6150 from gallushi/master and squashes the following commits:

2e79ea7dc <gallushi> Changed InternalFileDecryptor raw pointers and unique_ptr's to shared_ptr
ded0923cc <gallushi> re-ran clang-format
03680b5d0 <gallushi> Modified Encryption Tests
61f07fedd <gallushi> minor codestyle fixes
8f4fcb0a2 <Gal Lushi> add the InternalFileDecryptor as a member of {File,RowGroup}MetaData ; remove unnecessary row_group_ordinal function argument from RowGroupMetaData::ColumnChunk

Lead-authored-by: Gal Lushi <gallushi@gmail.com>
Co-authored-by: gallushi <gallushi@gmail.com>
Signed-off-by: Wes McKinney <wesm+git@apache.org>